name:            data-object-json
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Serialize JSON data to/from Haskell using the data-object library.
category:        Text
stability:       Stable
cabal-version:   >= 1.2
build-type:      Simple
homepage:        http://github.com/snoyberg/data-object-json/tree/master

library
    build-depends:   base >= 4 && < 5,
                     json-b >= 0.0.4,
                     bytestring-trie >= 0.1.4,
                     bytestring >= 0.9.1.4,
                     data-object >= 0.2.0 && < 0.3.0,
                     attempt >= 0.0.2 && < 0.1.0,
                     syb,
                     convertible >= 1.2.0 && < 1.3.0
    exposed-modules: Data.Object.JSON
    ghc-options:     -Wall
